--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,109 +1,109 @@
-@String(CVPR  = "Proc. of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)")
-@String(ICCV  = "Proc. of the IEEE/CVF Conference on International Conference on Computer Vision (ICCV)")
-@String(ECCV  = "Proc. of the European Conference on Computer Vision (ECCV)")
-@String(BMVC  =	"Proc. of the British Machine Vision Conference (BMVC)")
-@String(WACV  = "Pro. of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)")
-@String(NIPS  = "Advances in Neural Information Processing Systems (NIPS)")
-@String(ICML  = "Proc. of the International Conference on Machine Learning (ICML)")
-@String(ICLR  = "Proc. of the International Conference on Learning Representations (ICLR)")
-@String(AAAI  = "Proc. of the AAAI Conference on Artificial Intelligence")
-@String(NAACL = "Proc. of the Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)")
-@String(JMLR = "Journal of Machine Learning Research (JMLR)")
+@string(CVPR  = "Proc. of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)")
+@string(ICCV  = "Proc. of the IEEE/CVF Conference on International Conference on Computer Vision (ICCV)")
+@string(ECCV  = "Proc. of the European Conference on Computer Vision (ECCV)")
+@string(BMVC  =	"Proc. of the British Machine Vision Conference (BMVC)")
+@string(WACV  = "Pro. of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)")
+@string(NIPS  = "Advances in Neural Information Processing Systems (NIPS)")
+@string(ICML  = "Proc. of the International Conference on Machine Learning (ICML)")
+@string(ICLR  = "Proc. of the International Conference on Learning Representations (ICLR)")
+@string(AAAI  = "Proc. of the AAAI Conference on Artificial Intelligence")
+@string(NAACL = "Proc. of the Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)")
+@string(JMLR = "Journal of Machine Learning Research (JMLR)")
 
 
 
-@String(PAMI  = {IEEE TPAMI})
-@String(IJCV  = {IJCV})
-@String(CVPR  = {CVPR})
-@String(ICCV  = {ICCV})
-@String(ECCV  = {ECCV})
-@String(WACV  = {WACV})
-@String(NIPS  = {NIPS})
-@String(NeurIPS  = {NeurIPS})
-@String(ICPR  = {ICPR})
-@String(BMVC  =	{BMVC})
-@String(TOG   = {ACM TOG})
-@String(TIP   = {IEEE TIP})
-@String(TVCG  = {IEEE TVCG})
-@String(TCSVT = {IEEE TCSVT})
-@String(TMM   =	{IEEE TMM})
-@String(ACMMM = {ACM MM})
-@String(ICME  =	{ICME})
-@String(ICASSP=	{ICASSP})
-@String(ICIP  = {ICIP})
-@String(ACCV  = {ACCV})
-@String(ICLR  = {ICLR})
-@String(IJCAI = {IJCAI})
-@String(PR = {PR})
-@String(AAAI = {AAAI})
-@String(CVPRW= {CVPRW})
-@String(CSVT = {IEEE TCSVT})
+@string(PAMI  = {IEEE TPAMI})
+@string(IJCV  = {IJCV})
+@string(CVPR  = {CVPR})
+@string(ICCV  = {ICCV})
+@string(ECCV  = {ECCV})
+@string(WACV  = {WACV})
+@string(NIPS  = {NIPS})
+@string(NeurIPS  = {NeurIPS})
+@string(ICPR  = {ICPR})
+@string(BMVC  =	{BMVC})
+@string(TOG   = {ACM TOG})
+@string(TIP   = {IEEE TIP})
+@string(TVCG  = {IEEE TVCG})
+@string(TCSVT = {IEEE TCSVT})
+@string(TMM   =	{IEEE TMM})
+@string(ACMMM = {ACM MM})
+@string(ICME  =	{ICME})
+@string(ICASSP=	{ICASSP})
+@string(ICIP  = {ICIP})
+@string(ACCV  = {ACCV})
+@string(ICLR  = {ICLR})
+@string(IJCAI = {IJCAI})
+@string(PR = {PR})
+@string(AAAI = {AAAI})
+@string(CVPRW= {CVPRW})
+@string(CSVT = {IEEE TCSVT})
 
-@String(PAMI = {IEEE Trans. Pattern Anal. Mach. Intell.})
-@String(IJCV = {Int. J. Comput. Vis.})
-@String(ICPR = {Int. Conf. Pattern Recog.})
-@String(ACMMM= {ACM Int. Conf. Multimedia})
-@String(ICIP = {IEEE Int. Conf. Image Process.})
-@String(PR   = {Pattern Recognition})
-@String(CSVT = {IEEE Trans. Circuit Syst. Video Technol.})
+@string(PAMI = {IEEE Trans. Pattern Anal. Mach. Intell.})
+@string(IJCV = {Int. J. Comput. Vis.})
+@string(ICPR = {Int. Conf. Pattern Recog.})
+@string(ACMMM= {ACM Int. Conf. Multimedia})
+@string(ICIP = {IEEE Int. Conf. Image Process.})
+@string(PR   = {Pattern Recognition})
+@string(CSVT = {IEEE Trans. Circuit Syst. Video Technol.})
 
-@String(PAMI = {IEEE Trans. Pattern Anal. Mach. Intell.})
-@String(IJCV = {Int. J. Comput. Vis.})
-@String(CVPR= {IEEE Conf. Comput. Vis. Pattern Recog.})
-@String(ICCV= {Int. Conf. Comput. Vis.})
-@String(ECCV= {Eur. Conf. Comput. Vis.})
-@String(NIPS= {Adv. Neural Inform. Process. Syst.})
-@String(ICPR = {Int. Conf. Pattern Recog.})
-@String(BMVC= {Brit. Mach. Vis. Conf.})
-@String(TOG= {ACM Trans. Graph.})
-@String(TIP  = {IEEE Trans. Image Process.})
-@String(TVCG  = {IEEE Trans. Vis. Comput. Graph.})
-@String(TMM  = {IEEE Trans. Multimedia})
-@String(ACMMM= {ACM Int. Conf. Multimedia})
-@String(ICME = {Int. Conf. Multimedia and Expo})
-@String(ICASSP=	{ICASSP})
-@String(ICIP = {IEEE Int. Conf. Image Process.})
-@String(ACCV  = {ACCV})
-@String(ICLR = {Int. Conf. Learn. Represent.})
-@String(IJCAI = {IJCAI})
-@String(PR   = {Pattern Recognition})
-@String(AAAI = {AAAI})
-@String(CVPRW= {IEEE Conf. Comput. Vis. Pattern Recog. Worksh.})
-@String(CSVT = {IEEE Trans. Circuit Syst. Video Technol.})
+@string(PAMI = {IEEE Trans. Pattern Anal. Mach. Intell.})
+@string(IJCV = {Int. J. Comput. Vis.})
+@string(CVPR= {IEEE Conf. Comput. Vis. Pattern Recog.})
+@string(ICCV= {Int. Conf. Comput. Vis.})
+@string(ECCV= {Eur. Conf. Comput. Vis.})
+@string(NIPS= {Adv. Neural Inform. Process. Syst.})
+@string(ICPR = {Int. Conf. Pattern Recog.})
+@string(BMVC= {Brit. Mach. Vis. Conf.})
+@string(TOG= {ACM Trans. Graph.})
+@string(TIP  = {IEEE Trans. Image Process.})
+@string(TVCG  = {IEEE Trans. Vis. Comput. Graph.})
+@string(TMM  = {IEEE Trans. Multimedia})
+@string(ACMMM= {ACM Int. Conf. Multimedia})
+@string(ICME = {Int. Conf. Multimedia and Expo})
+@string(ICASSP=	{ICASSP})
+@string(ICIP = {IEEE Int. Conf. Image Process.})
+@string(ACCV  = {ACCV})
+@string(ICLR = {Int. Conf. Learn. Represent.})
+@string(IJCAI = {IJCAI})
+@string(PR   = {Pattern Recognition})
+@string(AAAI = {AAAI})
+@string(CVPRW= {IEEE Conf. Comput. Vis. Pattern Recog. Worksh.})
+@string(CSVT = {IEEE Trans. Circuit Syst. Video Technol.})
 
-@String(SPL	= {IEEE Sign. Process. Letters})
-@String(VR   = {Vis. Res.})
-@String(JOV	 = {J. Vis.})
-@String(TVC  = {The Vis. Comput.})
-@String(JCST  = {J. Comput. Sci. Tech.})
-@String(CGF  = {Comput. Graph. Forum})
-@String(CVM = {Computational Visual Media})
+@string(SPL	= {IEEE Sign. Process. Letters})
+@string(VR   = {Vis. Res.})
+@string(JOV	 = {J. Vis.})
+@string(TVC  = {The Vis. Comput.})
+@string(JCST  = {J. Comput. Sci. Tech.})
+@string(CGF  = {Comput. Graph. Forum})
+@string(CVM = {Computational Visual Media})
 
 
-@String(PAMI  = {IEEE TPAMI})
-@String(IJCV  = {IJCV})
-@String(CVPR  = {CVPR})
-@String(ICCV  = {ICCV})
-@String(ECCV  = {ECCV})
-@String(NIPS  = {NeurIPS})
-@String(ICPR  = {ICPR})
-@String(BMVC  =	{BMVC})
-@String(TOG   = {ACM TOG})
-@String(TIP   = {IEEE TIP})
-@String(TVCG  = {IEEE TVCG})
-@String(TCSVT = {IEEE TCSVT})
-@String(TMM   =	{IEEE TMM})
-@String(ACMMM = {ACM MM})
-@String(ICME  =	{ICME})
-@String(ICASSP=	{ICASSP})
-@String(ICIP  = {ICIP})
-@String(ACCV  = {ACCV})
-@String(ICLR  = {ICLR})
-@String(IJCAI = {IJCAI})
-@String(PR = {PR})
-@String(AAAI = {AAAI})
-@String(CVPRW= {CVPRW})
-@String(CSVT = {IEEE TCSVT})
+@string(PAMI  = {IEEE TPAMI})
+@string(IJCV  = {IJCV})
+@string(CVPR  = {CVPR})
+@string(ICCV  = {ICCV})
+@string(ECCV  = {ECCV})
+@string(NIPS  = {NeurIPS})
+@string(ICPR  = {ICPR})
+@string(BMVC  =	{BMVC})
+@string(TOG   = {ACM TOG})
+@string(TIP   = {IEEE TIP})
+@string(TVCG  = {IEEE TVCG})
+@string(TCSVT = {IEEE TCSVT})
+@string(TMM   =	{IEEE TMM})
+@string(ACMMM = {ACM MM})
+@string(ICME  =	{ICME})
+@string(ICASSP=	{ICASSP})
+@string(ICIP  = {ICIP})
+@string(ACCV  = {ACCV})
+@string(ICLR  = {ICLR})
+@string(IJCAI = {IJCAI})
+@string(PR = {PR})
+@string(AAAI = {AAAI})
+@string(CVPRW= {CVPRW})
+@string(CSVT = {IEEE TCSVT})
 
 @inproceedings{yi2023towards,
   title={Towards physically reliable molecular representation learning},
