--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,6 +5,7 @@
   title={Towards physically reliable molecular representation learning},
   author={Yi, Seunghoon and Cho, Youngwoo and Sul, Jinhwan and Seung Woo Ko and Kim, Soo Kyung and Choo, Jaegul and Yoon, Hongkee and Lee, Joonseok},
   booktitle={Uncertainty in Artificial Intelligence},
+  abbr={UAI},
   pages={2433--2443},
   year={2023},
   organization={PMLR}
