--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @inproceedings{yi2023towards,
   title={Towards physically reliable molecular representation learning},
-  author={Yi, Seunghoon and Cho, Youngwoo and Sul, Jinhwan and Seung Woo Ko and Kim, Soo Kyung and Choo, Jaegul and Yoon, Hongkee and Lee, Joonseok},
+  author={Yi, Seunghoon and Youngwoo Cho and Sul, Jinhwan and Ko, Seung Woo and Kim, Soo Kyung and Choo, Jaegul and Yoon, Hongkee and Lee, Joonseok},
   booktitle={Uncertainty in Artificial Intelligence},
   abbr={UAI},
   pages={2433--2443},
