Update bib source

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,6 +18,7 @@
   title={ENTO: Decoders for Decoder in Camouflaged Object Detection},
   author={Ko, Seung Woo and Bang, Seungjai and Hong, Joopyo and Kim, Suyoung and Cho, Sungzoon and Kwak, Nojun and Kim, Hyun-Sin and Lee, Joonseok},
   booktitle={the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  abbr={CVPR},
   pages={},
   year={2024},
   review={underreview}
@@ -27,6 +28,7 @@
   title={Continuous Synthesis of Ruthenium Nanoparticles with Tuneable Sizes using Ruthenium Nitrosyl Nitrate Precursor},
   author={El-Kadi, Joseph and Fenoaltea Peche, Eugenio and Ko, Seung Woo and Torrente-Murciano, Laura},
   journal={Reaction Chemistry \& Engineering},
+  abbr={React. Chem. Eng.},
   year={2024},
   publisher={Royal Society of Chemistry}
 }
