--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,5 +30,6 @@
   journal={Reaction Chemistry \& Engineering},
   abbr={React. Chem. Eng.},
   year={2024},
-  publisher={Royal Society of Chemistry}
+  publisher={Royal Society of Chemistry},
+  review={underreview}
 }
