--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,7 @@
 
 @inproceedings{ko2024cod,
   title={ENTO: Decoders for Decoder in Camouflaged Object Detection},
-  author={Ko, Seung Woo and Bang, Seungjai and Hong, Joopyo and Kim, Suyoung and Cho, Sungzoon and Kwak, Nojun and Kim, Hyun-Sin and Lee, Joonseok},
+  author={Ko, Seung Woo and Bang, Seungjai and Hong, Joopyo and Kim, Suyoung and Cho, Sungzoon and Kwak, Nojun and Kim, Hyung-Sin and Lee, Joonseok},
   booktitle={the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
   abbr={CVPR},
   pages={},
