--- a/_posts/2023-07-19-molr.md
+++ b/_posts/2023-07-19-molr.md
@@ -69,7 +69,11 @@ Paper Link: https://openreview.net/pdf?id=6sh3pIzKS-
     $$
     
 
-![Untitled](MolR%20Chemical-Reaction-Aware%20Molecule%20Representati%2070e8b20eef2e450ebb18e80e31492638/Untitled.png)
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid path="assets/img/molr/molr.png" class="img-fluid z-depth-1" %}
+    </div>
+</div>
 
 ### 2) Chemical Equivalence Condition
 
