--- a/_posts/2023-07-19-molr.md
+++ b/_posts/2023-07-19-molr.md
@@ -3,7 +3,7 @@ layout: post
 title: MolR - Chemical-Reaction-Aware Molecule Representation Learning
 date: 2023-07-19 16:40:16
 description: ICLR 2022
-tags: paper review
+tags: paper
 categories:
 ---
 
