Update blog and projects

--- a/_posts/2023-07-19-molr.md
+++ b/_posts/2023-07-19-molr.md
@@ -2,19 +2,10 @@
 layout: post
 title: MolR - Chemical-Reaction-Aware Molecule Representation Learning
 date: 2023-07-19 16:40:16
-description: ICLR 2022
+description: Molecule Representation (ICLR 2022)
 tags: paper
 categories:
 ---
-
-# MolR: Chemical-Reaction-Aware Molecule Representation Learning
-
-Created: July 19, 2023 9:02 PM
-Tags: Molecule
-Conference: ICLR
-Year: 2022
-Status: Reviewed
-Paper Link: https://openreview.net/pdf?id=6sh3pIzKS-
 
 ## Main Idea
 
