--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,12 +24,10 @@
   review={underreview}
 }
 
-@article{elkadi2024ru,
-  title={Continuous Synthesis of Ruthenium Nanoparticles with Tuneable Sizes using Ruthenium Nitrosyl Nitrate Precursor},
-  author={El-Kadi, Joseph and Fenoaltea Peche, Eugenio and Ko, Seung Woo and Torrente-Murciano, Laura},
+@article{el2023continuous,
+  title={Continuous synthesis of ruthenium nanoparticles with tuneable sizes using ruthenium nitrosyl nitrate precursor},
+  author={El-Kadi, Joseph and Pieche, Eugenio Fenoaltea and Ko, Seung Woo and Torrente-Murciano, Laura},
   journal={Reaction Chemistry \& Engineering},
-  abbr={React. Chem. Eng.},
-  year={2024},
-  publisher={Royal Society of Chemistry},
-  review={underreview}
+  year={2023},
+  publisher={Royal Society of Chemistry}
 }
