--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,3 +34,13 @@
   abstract={This paper presents a novel approach for the synthesis of ruthenium nanoparticles via the reduction of ruthenium nitrosyl nitrate with sodium borohydride in flow 3D helical reactors in the absence of capping ligands. Manipulating the pH-speciation of the ruthenium precursor and the fluid dynamics of the flow system allows for the synthesis of small nanoparticles and the tuning of average size with narrow size distributions (2–4 ± 0.5 nm). A mechanism is proposed for the NP synthesis involving the formation of a stable ruthenium nitrite complex from the ruthenium nitrosyl nitrate precursor in the presence of sodium hydroxide, which avoids unwanted metal oxide hydrolysis or precipitation. In contrast, more conventional metal precursors such as chlorides or nitrates easily hydrolyse under basic conditions forming metal oxides or precipitates. We also demonstrate the need of achieving fast mixing of reactants (<50 ms) to enable a homogeneous nucleation under such fast reduction kinetics. This work is a demonstration of the need of combining reaction chemistry and engineering approaches on the synthesis of nanomaterials.},
   pdf={https://pubs.rsc.org/en/content/articlepdf/2024/re/d3re00585b}
 }
+
+@inproceedings{hormazabal2024exploring,
+title={Exploring Neural Scaling Laws in Molecular Pretraining with Synthetic Tasks},
+author={Hormazabal, Rodrigo and Ko, Seung Woo and Yoo, Inwan and Han, Sehui and Bertens, Paul},
+booktitle={ICML 2024 AI for Science Workshop},
+year={2024},
+url={https://openreview.net/forum?id=8bDtKWSVja},
+abbr={ICML AI4Science},
+abstract={Acquiring large-scale annotated molecular datasets has been one of the main bottlenecks in scaling foundational models for chemistry applications. Proprietary issues, cost, and complex experimental setups have led to restrictively small labeled datasets for some predictive tasks. Unlike in language models, where pre-training has shown significant improvements in downstream tasks, molecular pre-training has yet to demonstrate a similar impact. Inspired by the success of neural scaling laws, we explore the impact of synthetic pre-training for molecular machine learning models on their downstream performance. We pre-train models of three sizes (12M, 45M, 230M parameters) using 12 synthetic tasks in an encoder-decoder setup and evaluate their performance across 10 downstream tasks. Our findings reveal a general correlation between pre-training perplexity and downstream task performance, with this relationship varying across different tasks. These insights suggest that pre-training metrics could provide valuable estimates of model performance post-fine-tuning. We pre-train models with over 10B tokens and observe that models saturate, indicating potential for further parameter scaling. This study represents a preliminary exploration of synthetic task pre-training for molecular models, which can be complementary to other pre-training methods such as multi-task learning with labeled data and multimodal learning.},
+}
