--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 # 2024
 @inproceedings{hormazabal2024exploring,
   title={Exploring Neural Scaling Laws in Molecular Pretraining with Synthetic Tasks},
-  author={Hormazabal, Rodrigo and Ko, Seung Woo and Yoo, Inwan and Han, Sehui and Bertens, Paul},
+  author={Hormazabal*, Rodrigo and Ko*, Seung Woo and Yoo, Inwan and Han, Sehui and Bertens, Paul},
   booktitle={ICML 2024 AI for Science Workshop},
   year={2024},
   pdf={https://openreview.net/attachment?id=8bDtKWSVja&name=pdf},
@@ -14,7 +14,7 @@
 
 @inproceedings{ko2024cod,
   title={A Revisit to the Decoder for Camouflaged Object Detection},
-  author={Ko, Seung Woo and Bang, Seungjai and Hong, Joopyo and Kim, Suyoung and Cho, Sungzoon and Kwak, Nojun and Kim, Hyung-Sin and Lee, Joonseok},
+  author={Ko*, Seung Woo and Bang*, Seungjai and Hong*, Joopyo and Kim*, Suyoung and Cho, Sungzoon and Kwak, Nojun and Kim, Hyung-Sin and Lee, Joonseok},
   booktitle={British Machine Vision Conference},
   abbr={BMVC},
   year={2024},
@@ -53,5 +53,6 @@
   award={Oral},
   abstract={Estimating the energetic properties of molecular systems is a critical task in material design. Machine learning has shown remarkable promise on this task over classical force fields, but a fully data-driven approach suffers from limited labeled data; not just the amount of available data lacks, but the distribution of labeled examples is highly skewed to stable states. In this work, we propose a molecular representation learning method that extrapolates well beyond the training distribution, powered by physics-driven parameter estimation from classical energy equations and self-supervised learning inspired from masked language modeling. To ensure reliability of the proposed model, we introduce a series of novel evaluation schemes in multifaceted ways, beyond the energy or force accuracy that has been dominantly used. From extensive experiments, we demonstrate that the proposed method is effective in discovering molecular structures, outperforming other baselines. Furthermore, we extrapolate it to the chemical reaction pathways beyond stable states, taking a step towards physically reliable molecular representation learning.},
   pdf={https://proceedings.mlr.press/v216/yi23a/yi23a.pdf},
-  poster={https://www.auai.org/uai2023/posters/95.pdf}
+  poster={https://www.auai.org/uai2023/posters/95.pdf},
+  slides={https://www.auai.org/uai2023/oral_slides/95-oral-slides.pdf}
 }
